# ctask

./: .gitignore  CMakeLists.txt  Makefile  README.md  conandata.yml
app/: main.cpp
config/: config.json  docker-config.json
ctask_lib/: CMakeLists.txt  logger.h
ctask_lib/cli/: cli_parser.cpp  cli_parser.h
ctask_lib/network/http/parser/: i_http_parser.h
ctask_lib/network/http/parser/json/: http_parser.cpp  http_parser.h  json_http_parser.cpp  json_http_parser.h
ctask_lib/network/http/response_serializer/: i_response_serializer.h
ctask_lib/network/http/response_serializer/json/: response_serializer.cpp  response_serializer.h
ctask_lib/network/http/router/: i_router.h  router.cpp  router.h  router_builder.cpp  router_builder.h
ctask_lib/network/http/router/custom/: router.cpp  router.h
ctask_lib/service/: i_service.h
ctask_lib/service/http_server/: http_server.cpp  http_server.h
ctask_lib/telemetry/api/: routes.cpp  routes.h
ctask_lib/telemetry/core/: misc.h  models.h  telemetry_storage.cpp  telemetry_storage.h
ctask_lib/telemetry/dto/: dto.h
ctask_lib/utils/misc/: misc.h
ctask_lib/utils/types/: constants.h  types.h
test/: CMakeLists.txt  helper.h  test_main.cpp
test/cli_test/: cli_test.cpp
test/integrational_test/: integrational_test.cpp
test/mock/: mock_router.h
test/network_test/http_test/parser_test/: json_http_parser_test.cpp
test/network_test/http_test/response_serializer_test/: json_response_serializer_test.cpp
test/network_test/http_test/router_test/: router_test.cpp
test/service_test/server_test/: create_server_test.cpp  request_handle_server_test.cpp  shutdown_server_test.cpp
test/telemetry_test/core_test/: telemetry_storage_test.cpp
